feat: drag and drop for the ships

--- a/src/template.html
+++ b/src/template.html
@@ -7,17 +7,25 @@
 </head>
 <body>
     <div class="player1">
-        <div class="details"></div>
+        <div class="details">
+            <h1>Player 1</h1>
+            <p>Click play after you have placed your ships.</p>
+            <button id="player1PlayBtn">Play</button>
+        </div>
         <div class="grids">
             <div class="myGrid1"></div>
-            <div class="opponentGrid1"></div>
+            <!-- <div class="opponentGrid1"></div> -->
         </div>
     </div>
     <div class="player2">
-        <div class="details"></div>
+        <div class="details">
+            <h1>Player 2</h1>
+            <p>Click play after you have placed your ships.</p>
+            <button id="player2PlayBtn">Play</button>
+        </div>
         <div class="grids">
             <div class="myGrid2"></div>
-            <div class="opponentGrid2"></div>
+            <!-- <div class="opponentGrid2"></div> -->
         </div>
     </div>
 </body>
