Collect ship positions data and fix ship positioning bug
-since the four corners of the ship were checked to move the ship
-we were missing the middle points in the ship
-so we check every corner in every cell in the ship

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
         <div class="details">
             <h1>Player 1</h1>
             <p>Click play after you have placed your ships.</p>
-            <button id="player1PlayBtn">Play</button>
+            <button id="myGrid1PlayBtn">Play</button>
         </div>
         <div class="grids">
             <div class="myGrid1"></div>
@@ -21,7 +21,7 @@
         <div class="details">
             <h1>Player 2</h1>
             <p>Click play after you have placed your ships.</p>
-            <button id="player2PlayBtn">Play</button>
+            <button id="myGrid2PlayBtn">Play</button>
         </div>
         <div class="grids">
             <div class="myGrid2"></div>
