--- a/src/template.html
+++ b/src/template.html
@@ -11,10 +11,11 @@
             <h1>Player 1</h1>
             <p>Click play after you have placed your ships.</p>
             <button id="myGrid1PlayBtn">Play</button>
+            <div class="gameStatus1"></div>
         </div>
         <div class="grids">
             <div class="myGrid1"></div>
-            <!-- <div class="opponentGrid1"></div> -->
+            <div class="opponentGrid1"></div>
         </div>
     </div>
     <div class="player2">
@@ -22,10 +23,11 @@
             <h1>Player 2</h1>
             <p>Click play after you have placed your ships.</p>
             <button id="myGrid2PlayBtn">Play</button>
+            <div class="gameStatus2"></div>
         </div>
         <div class="grids">
             <div class="myGrid2"></div>
-            <!-- <div class="opponentGrid2"></div> -->
+            <div class="opponentGrid2"></div>
         </div>
     </div>
 </body>
