Integrate the pass and play page to home page
feat: include random ship positions button

--- a/src/passAndPlay.html
+++ b/src/passAndPlay.html
@@ -9,6 +9,7 @@
     <div class="player1">
         <div class="details">
             <h1>Player 1</h1>
+            <button id="myGrid1RandomPositionsOfShip">Place Ships ranadomly</button>
             <p>Click play after you have placed your ships.</p>
             <button id="myGrid1PlayBtn">Play</button>
             <div class="gameStatus1"></div>
@@ -21,6 +22,7 @@
     <div class="player2">
         <div class="details">
             <h1>Player 2</h1>
+            <button id="myGrid2RandomPositionsOfShip">Place Ships ranadomly</button>
             <p>Click play after you have placed your ships.</p>
             <button id="myGrid2PlayBtn">Play</button>
             <div class="gameStatus2"></div>
