--- a/src/passAndPlay.html
+++ b/src/passAndPlay.html
@@ -10,7 +10,7 @@
         <div class="details">
             <h1>Player 1</h1>
             <button id="myGrid1RandomPositionsOfShip">Place Ships ranadomly</button>
-            <p>Click play after you have placed your ships.</p>
+            <p>Click play after you have placed your ships. You can place ships manually or with random button or with both.</p>
             <button id="myGrid1PlayBtn">Play</button>
             <div class="gameStatus1"></div>
         </div>
@@ -18,12 +18,13 @@
             <div class="myGrid1"></div>
             <div class="opponentGrid1"></div>
         </div>
+        <div id="player1ScreenBlock"></div>
     </div>
     <div class="player2">
         <div class="details">
             <h1>Player 2</h1>
             <button id="myGrid2RandomPositionsOfShip">Place Ships ranadomly</button>
-            <p>Click play after you have placed your ships.</p>
+            <p>Click play after you have placed your ships. You can place ships manually or with random button or with both.</p>
             <button id="myGrid2PlayBtn">Play</button>
             <div class="gameStatus2"></div>
         </div>
@@ -31,6 +32,8 @@
             <div class="myGrid2"></div>
             <div class="opponentGrid2"></div>
         </div>
+        <div id="player2ScreenBlock"></div>
     </div>
+    <div id="blockWholeScreen"></div>
 </body>
 </html>
