--- a/src/playComputer.html
+++ b/src/playComputer.html
@@ -6,6 +6,29 @@
     <title>Play computer</title>
 </head>
 <body>
-    
+    <div class="player">
+        <div class="details">
+            <h1>Player</h1>
+            <button id="myGrid0RandomPositionsOfShip">Place Ships ranadomly</button>
+            <p>Click play after you have placed your ships. You can place ships manually or with random button or with both.</p>
+            <button id="myGrid0PlayBtn">Play</button>
+            <div class="gameStatusForPlayer"></div>
+        </div>
+        <div class="grids">
+            <div class="myGrid0"></div>
+            <div class="opponentGrid"></div>
+        </div>
+    </div>
+    <div class="computer">
+        <div class="details">
+            <h1>Computer</h1>
+            <p id="computerGridRandomPositionsOfShip"></p>
+        </div>
+        <div class="grids">
+            <div class="computerGrid"></div>
+            <div class="humanGrid"></div>
+        </div>
+        <!-- <div id="computerPlayAreaScreenBlock"><p>vs</p><p>Computer</p></div> -->
+    </div>
 </body>
 </html>
