--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>BATTLE-SHIP</h1>
-  <button id="playComputer">Play Computer</button>
+  <button id="playComputer"><a href="playComputer.html">Play Computer</a></button>
   <button id="passAndPlay"><a href="passAndPlay.html">Pass and Play</a></button>
 </body>
 </html>
