Feat:   Add a block screen for computer while         -playing computer

--- a/src/playComputer.html
+++ b/src/playComputer.html
@@ -28,7 +28,7 @@
             <div class="computerGrid"></div>
             <div class="humanGrid"></div>
         </div>
-        <!-- <div id="computerPlayAreaScreenBlock"><p>vs</p><p>Computer</p></div> -->
+        <div id="computerPlayAreaScreenBlock"><p>vs</p><p>Computer</p></div>
     </div>
 </body>
 </html>
